--- a/sandbox.client/front/ts/app/client_info_form/client_info_form.component.css
+++ b/sandbox.client/front/ts/app/client_info_form/client_info_form.component.css
@@ -1,6 +1,8 @@
 body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box}
 
+label { display: block; float: left; clear: left;}
+
 /* The Modal (background) */
 .modal {
   display: none; /* Hidden by default */
