--- a/sandbox.client/front/ts/app/client_info_form/client_info_form.component.css
+++ b/sandbox.client/front/ts/app/client_info_form/client_info_form.component.css
@@ -1,7 +1,3 @@
-body {font-family: Arial, Helvetica, sans-serif;}
-* {box-sizing: border-box}
-
-label { display: block; float: left; clear: left;}
 
 /* The Modal (background) */
 .modal {
@@ -18,7 +14,6 @@ label { display: block; float: left; clear: left;}
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-/* Modal Content */
 .modal-content {
   background-color: #fefefe;
   margin: auto;
@@ -35,16 +30,26 @@ td {
   padding-left: 5px;
 }
 
-input {
+.custom_input {
   width: 100%;
-  padding: 5px;
-  margin: 5px;
+  padding: 10px;
+  margin: 5px 0 10px 0;
   display: inline-block;
   border: none;
   background: #f1f1f1;
 }
 
-input:focus {
+select {
+  width: 100%;
+  padding: 10px;
+  height: 40px;
+  margin: 5px 0 10px 0;
+  display: inline-block;
+  border: none;
+  background: #f1f1f1;
+}
+
+.custom_input:focus {
   background-color: #ddd;
   outline: none;
 }
@@ -54,7 +59,6 @@ hr {
   margin-bottom: 25px;
 }
 
-/* Set a style for all buttons */
 button {
   background-color: rgb(59,97,151);
   color: white;
@@ -69,21 +73,16 @@ button {
 button:hover {
   opacity:1;
 }
-
-/* Extra styles for the cancel button */
 .cancelbtn {
   padding: 14px 20px;
   background-color: red;
   width: 100%;
 }
-
-/* Float cancel and signup buttons and add an equal width */
 .cancelbtn, .signupbtn {
   float: left;
   width: 100%;
 }
 
-/* Add padding to container elements */
 .container {
   padding: 16px;
 }
