--- a/sandbox.client/front/ts/app/client_info_form/client_info_form.component.html
+++ b/sandbox.client/front/ts/app/client_info_form/client_info_form.component.html
@@ -3,102 +3,99 @@
 <head>
 </head>
 <body>
-  <div class="modal" id="myModal">
-    <div class="modal-content">
-      <div class="container">
-
-        <table style="width:100%">
-          <colgroup>
-            <col>
-            <col>
-          </colgroup>
-          <thead>
-            <tr class="tr-head">
-              <th style="width: 50%"><h1>Новый клиент</h1></th>
-              <th style="width: 50%"></th>
-            </tr>
-          </thead>
-          <tbody>
-          <tr><td colspan="2"><hr></td></tr>
-          <tr>
-            <td colspan="1">
-              <label><b>Фамилия</b><span class="red_star">*</span></label>
-              <input id="surname" name="surname" type="text" placeholder="Фамилия" required>
-            </td>
-            <td colspan="1">
-              <label><b>Имя</b><span class="red_star">*</span></label>
-              <input id="name" type="text" placeholder="Имя" required>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <label><b>Отчество</b></label>
-              <input id="patronymic" type="text" placeholder="Имя" required>
-            </td>
-            <td>
-              <label><b>Пол</b><span class="red_star">*</span></label>
-              <label>Male:<input id="sex_male" type="radio" name="gender" value="male"/></label>
-              <label>Female: <input id="sex_female" type="radio" name="gender" value="female"/></label>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <label><b>Возраст</b><span class="red_star">*</span></label>
-              <input id="age" type="number" placeholder="Возраст" required>
-            </td>
-            <td>
-              <label><b>Характер</b><span class="red_star">*</span></label>
-              <p style="padding: 10px">
-                <select id="character">
-                  <option *ngFor="let character of characters" value="{{character}}">{{character}}</option>
-                </select>
-              </p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <label><b>Адрес регистрации</b><span class="red_star">*</span></label>
-              <input id="ra_street" type="text" placeholder="Улица" required>
-              <input id="ra_house" type="text" placeholder="Дом" required>
-              <input id="ra_apartment" type="text" placeholder="Квартира" required>
-            </td>
-            <td>
-              <label><b>Адрес проживания</b></label>
-              <input id="la_street" type="text" placeholder="Улица" required>
-              <input id="la_home" type="text" placeholder="Дом" required>
-              <input id="la_apartment" type="text" placeholder="Квартира" required>
-            </td>
-          </tr>
-          <tr>
-            <td colspan="2">
-              <label><b>Телефоны</b><span class="red_star">*</span></label>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <input id="home_phone" type="tel" placeholder="Домашний" required>
-              <input id="work_phone" type="tel" placeholder="Рабочий" required>
-              <input id="mobile_phone1" type="tel" placeholder="Мобильный1" required>
-            </td>
-            <td>
-              <input id="mobile_phone2" type="tel" placeholder="Мобильный2" required>
-              <input id="mobile_phone3" type="tel" placeholder="Мобильный3" required>
-            </td>
-          </tr>
-          </tbody>
-          <tfoot>
-          <tr>
-              <td>
-                <button type="button" class="cancelbtn" (click)="close()">Заткрыть</button>
-              </td>
-              <td>
-                <button type="submit" class="signupbtn" (click)="add()">Добавить</button>
-              </td>
-            </tr>
-          </tfoot>
-        </table>
-      </div>
-    </div>
-  </div>
+<div class="modal" id="myModal">
+  <div class="modal-content">
+    <table style="width:100%">
+      <colgroup>
+        <col>
+        <col>
+      </colgroup>
+      <thead>
+      <tr class="tr-head">
+        <th style="width: 50%"><h1>Новый клиент</h1></th>
+        <th style="width: 50%"></th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr><td colspan="2"><hr></td></tr>
+      <tr>
+        <td colspan="1">
+          <label><b>Фамилия</b><span class="red_star">*</span></label>
+          <input class="custom_input" id="surname" name="surname" type="text" placeholder="Фамилия" required>
+        </td>
+        <td colspan="1">
+          <label><b>Имя</b><span class="red_star">*</span></label>
+          <input class="custom_input"  id="name" type="text" placeholder="Имя" required>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <label><b>Отчество</b></label>
+          <input class="custom_input" id="patronymic" type="text" placeholder="Имя" required>
+        </td>
+        <td>
+          <label><b>День рождения</b><span class="red_star">*</span></label>
+          <input class="custom_input" id="birth_day" type="date" placeholder="Возраст" required>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <label><b>Пол</b><span class="red_star">*</span></label><br>
+          <label>Male: &nbsp; <input id="male" type="radio" name="gender" value="male"/></label>
+          <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Female: &nbsp; <input id="female" type="radio" name="gender" value="female"/></label>
+        </td>
+        <td>
+          <label><b>Характер</b><span class="red_star">*</span></label>
+          <p>
+            <select id="charm">
+              <option *ngFor="let charm of charms" value="{{charm}}">{{charm.name}}</option>
+            </select>
+          </p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <label><b>Адрес регистрации</b><span class="red_star">*</span></label>
+          <input class="custom_input" id="ra_street" type="text" placeholder="Улица" required>
+          <input class="custom_input" id="ra_house" type="text" placeholder="Дом" required>
+          <input class="custom_input" id="ra_flat" type="text" placeholder="Квартира" required>
+        </td>
+        <td>
+          <label><b>Адрес проживания</b></label>
+          <input class="custom_input" id="ha_street" type="text" placeholder="Улица" required>
+          <input class="custom_input" id="ha_house" type="text" placeholder="Дом" required>
+          <input class="custom_input" id="ha_flat" type="text" placeholder="Квартира" required>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="2">
+          <label><b>Телефоны</b><span class="red_star">*</span>(один мобильный обязателен)</label>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <input class="custom_input" id="home_phone" type="text" placeholder="Домашний" required>
+          <input class="custom_input" id="work_phone" type="text" placeholder="Рабочий" required>
+          <input class="custom_input" id="mobile_phone1" type="text" placeholder="Мобильный1" required>
+        </td>
+        <td>
+          <input class="custom_input" id="mobile_phone2" type="text" placeholder="Мобильный2" required>
+          <input class="custom_input" id="mobile_phone3" type="text" placeholder="Мобильный3" required>
+        </td>
+      </tr>
+      </tbody>
+      <tfoot>
+      <tr>
+        <td>
+          <button type="button" class="cancelbtn" (click)="close()">Заткрыть</button>
+        </td>
+        <td>
+          <button type="submit" class="signupbtn" (click)="add()">Добавить</button>
+        </td>
+      </tr>
+      </tfoot>
+    </table>
+</div>
+</div>
 </body>
 </html>
