--- a/sandbox.client/front/ts/app/main_form/main_form.component.css
+++ b/sandbox.client/front/ts/app/main_form/main_form.component.css
@@ -7,6 +7,21 @@ body {font-family: Arial, Helvetica, sans-serif;}
   background-color: #e9e9e9;
 }
 
+.sort_tr {
+  font-size: 1.2em;
+  text-align: left;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: rgb(17, 64, 151);
+  color: white;
+  cursor: pointer;
+  text-transform: uppercase;
+}
+
+.sort_td {
+  color: black;
+}
+
 /* Style the links inside the navigation bar */
 .topnav button {
   margin: 6px;
@@ -79,7 +94,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 .customers tbody tr:hover {background-color: rgb(230,230,230);}
 
-.customers thead th {
+.not_sort_th {
   font-size: 1.2em;
   text-align: left;
   padding-top: 20px;
@@ -100,6 +115,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 }
 
 .delete-button {
+  outline: none;
   border: none;
   font-size: 20px;
   text-align: center;
