--- a/sandbox.client/front/ts/app/main_form/main_form.component.html
+++ b/sandbox.client/front/ts/app/main_form/main_form.component.html
@@ -13,8 +13,8 @@
       <button [ngClass]="{active:loadUserInfoButtonEnabled}" (click)="switchBetweenUserAndClient(false)" >Данные пользователя</button>
       <button [ngClass]="{active:loadClientInfoListButtonEnable}" (click)="switchBetweenUserAndClient(true)" >Данные клентов</button>
       <button *ngIf="loadClientInfoListButtonEnable" (click)="openAddNewClientModal()">Добавить новый клент</button>
-      <button style="float: right;">Поиск</button>
-      <input type="text" placeholder="Поиск.." (click)="openAddNewClientWindow()">
+      <button style="float: right;" (click)="filterPage()">Поиск</button>
+      <input id="search_input" type="text" placeholder="Поиск..">
     </div>
     <div *ngIf="loadClientInfoListButtonEnable">
       <table class="customers">
@@ -26,27 +26,30 @@
           <col>
           <col>
           <col>
+          <col>
         </colgroup>
         <thead>
         <tr class="tr-head">
-          <th>Name</th>
-          <th>Surname</th>
-          <th>Age</th>
-          <th>Balance</th>
-          <th>Max balance</th>
-          <th>Min balance</th>
-          <th>Delete</th>
+          <th [ngClass]="{sort_tr:sortIndex==0,not_sort_th:sortIndex!=0}" (click)="sortPage(0)">Name</th>
+          <th [ngClass]="{sort_tr:sortIndex==1,not_sort_th:sortIndex!=1}" (click)="sortPage(1)">Surname</th>
+          <th [ngClass]="{sort_tr:sortIndex==2,not_sort_th:sortIndex!=2}" (click)="sortPage(2)">Age</th>
+          <th [ngClass]="{sort_tr:sortIndex==3,not_sort_th:sortIndex!=3}" (click)="sortPage(3)">Balance</th>
+          <th [ngClass]="{sort_tr:sortIndex==4,not_sort_th:sortIndex!=4}" (click)="sortPage(4)">Max balance</th>
+          <th [ngClass]="{sort_tr:sortIndex==5,not_sort_th:sortIndex!=5}" (click)="sortPage(5)">Min balance</th>
+          <th class="not_sort_th">Delete</th>
+          <th class="not_sort_th">Edit</th>
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let client of clientInfoViewList">
-          <td scope="col">{{client.name}}</td>
-          <td scope="col">{{client.surname}}</td>
-          <td scope="col">{{client.age}}</td>
-          <td scope="col">{{client.balance}}</td>
-          <td scope="col">{{client.minBalance}}</td>
-          <td scope="col">{{client.maxBalance}}</td>
-          <td scope="col"><button class="delete-button" (click)="deleteClientInfoByIndex(client)"><i class="fa fa-trash"></i></button></td>
+        <tr *ngFor="let client of page.clientRecordsList">
+          <td [ngClass]="{sort_td:sortIndex==0}" scope="col">{{client.name}}</td>
+          <td [ngClass]="{sort_td:sortIndex==1}" scope="col">{{client.surname}}</td>
+          <td [ngClass]="{sort_td:sortIndex==2}" scope="col">{{client.age}}</td>
+          <td [ngClass]="{sort_td:sortIndex==3}" scope="col">{{client.middle_balance}}</td>
+          <td [ngClass]="{sort_td:sortIndex==4}" scope="col">{{client.max_balance}}</td>
+          <td [ngClass]="{sort_td:sortIndex==5}" scope="col">{{client.min_balance}}</td>
+          <td scope="col"><button class="delete-button" (click)="deleteClientInfoById(client)"><i class="fa fa-trash"></i></button></td>
+          <td scope="col"><button class="delete-button" (click)="editClient(client)">...</button></td>
         </tr>
         </tbody>
         <tfoot>
@@ -57,15 +60,15 @@
                   <span (click)="paginationPageButtonClicked(currentPage-1)" [hidden]="currentPage <= 1"> &lt; PREV</span>
                 </li>
                 <li>
-                  <span (click)="paginationPageButtonClicked(currentPage - 2)" [hidden]="currentPage < pagesSize - 2">{{currentPage - 2}}</span>
+                  <span (click)="paginationPageButtonClicked(currentPage - 2)" [hidden]="currentPage < pagesCount()- 2">{{currentPage - 2}}</span>
                   <span (click)="paginationPageButtonClicked(currentPage - 1)" [hidden]="currentPage === 1">{{currentPage - 1}}</span>
                   <span class="active">{{currentPage}}</span>
-                  <span (click)="paginationPageButtonClicked(currentPage + 1)" [hidden]="currentPage >= pagesSize - 1">{{currentPage + 1}}</span>
-                  <span (click)="paginationPageButtonClicked(currentPage + 2)" [hidden]="currentPage >= pagesSize - 2">{{currentPage + 2}}</span>
+                  <span (click)="paginationPageButtonClicked(currentPage + 1)" [hidden]="currentPage >= pagesCount() - 1">{{currentPage + 1}}</span>
+                  <span (click)="paginationPageButtonClicked(currentPage + 2)" [hidden]="currentPage >= pagesCount() - 2">{{currentPage + 2}}</span>
                   <span (click)="paginationPageButtonClicked(currentPage + 3)" [hidden]="currentPage !== 0 ">{{currentPage + 4}}</span>
                 </li>
                 <li>
-                  <span (click)="paginationPageButtonClicked(currentPage+1)" [hidden]="currentPage === pagesSize-1">NEXT &gt;</span>
+                  <span (click)="paginationPageButtonClicked(currentPage+1)" [hidden]="currentPage === pagesCount()-1">NEXT &gt;</span>
                 </li>
               </div>
             </td>
@@ -105,7 +108,7 @@
     </table>
   </div>
   </div>
-  <client-info-form-component></client-info-form-component>
+  <client-info-form-component [output]=""></client-info-form-component>
 </div>
 </body>
 </html>
