--- a/sandbox.client/front/ts/app/clients_list_form/clients_list_form.component.css
+++ b/sandbox.client/front/ts/app/clients_list_form/clients_list_form.component.css
@@ -1,29 +1,12 @@
 body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box}
 
-/* Add a black background color to the top navigation bar */
-.topnav {
+.custom-button {
+  float: left;
   overflow: hidden;
   background-color: #e9e9e9;
 }
-
-.sort_tr {
-  font-size: 1.2em;
-  text-align: left;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  background-color: rgb(17, 64, 151);
-  color: white;
-  cursor: pointer;
-  text-transform: uppercase;
-}
-
-.sort_td_up {
-  color: black;
-}
-
-/* Style the links inside the navigation bar */
-.topnav button {
+.custom-button button {
   margin: 6px;
   outline: none;
   float: left;
@@ -39,22 +22,11 @@ body {font-family: Arial, Helvetica, sans-serif;}
   font-size: 1.2em;
   text-transform: uppercase;
 }
-
-/* Change the color of links on hover */
-.topnav button:hover {
+.custom-button button:hover {
   background-color: rgb(249,249,249);
   color: black;
-
 }
-
-/* Style the "active" element to highlight the current page */
-.topnav button.active {
-  background-color: rgb(59,97,151);
-  color: white;
-}
-
-/* Style the search box inside the navigation bar */
-.topnav input[type=text] {
+.custom-button input[type=text] {
   float: right;
   padding: 6px;
   border: none;
@@ -63,38 +35,15 @@ body {font-family: Arial, Helvetica, sans-serif;}
   font-size: 17px;
 }
 
-/* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
-@media screen and (max-width: 600px) {
-  .topnav a, .topnav input[type=text] {
-    float: none;
-    display: block;
-    text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
-  }
-  .topnav input[type=text] {
-    border: 1px solid #ccc;
-  }
+.selector {
+  outline: none;
+  height: 40px;
+  width: 50px;
+  background-color: white;
+  border: 1px solid #ccc;
 }
 
-.customers {
-  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-  width: 100%;
-  table-layout:auto;
-  empty-cells: show;
-  border-collapse: separate;
-}
-
-.customers td, .customers th {
-  padding: 8px;
-}
-
-.customers tbody tr:nth-child(even){background-color: rgb(249,249,249);}
-
-.customers tbody tr:hover {background-color: rgb(230,230,230);}
-
-.not_sort_th {
+.not-sort-th {
   font-size: 1.2em;
   text-align: left;
   padding-top: 20px;
@@ -105,16 +54,31 @@ body {font-family: Arial, Helvetica, sans-serif;}
   text-transform: uppercase;
 }
 
+.customers {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  width: 100%;
+  table-layout:auto;
+  empty-cells: show;
+  border-collapse: separate;
+}
+.customers td, .customers th {
+  padding: 8px;
+}
+.customers tbody tr:nth-child(even){
+  background-color: rgb(249,249,249);
+}
+.customers tbody tr:hover {
+  background-color: rgb(230,230,230);
+}
 .customers td {
   font-size: 1em;
 }
-
 .customers tfoot td {
   vertical-align:center !important;
   align-items: center;
 }
 
-.delete-button {
+.action-button {
   outline: none;
   border: none;
   font-size: 20px;
@@ -124,24 +88,22 @@ body {font-family: Arial, Helvetica, sans-serif;}
   color: rgb(59,97,151);
   background-color: rgba(255,255,255,0);
 }
-
-.delete-button {
+.action-button {
   transition-duration: 0.4s;
 }
-
-.delete-button:hover {
+.action-button:hover {
   color: red;
 }
-
-.noselect {
+.no-select {
   user-select: none;
+  cursor: pointer;
+  outline: none;
 }
 
 .float_center {
   float: right;
-
   position: relative;
-  left: -50%; /* or right 50% */
+  left: -50%;
   text-align: left;
 }
 .float_center > .pagination {
@@ -155,11 +117,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
   text-decoration: none;
   transition: background-color .3s;
 }
-
 .pagination span.active {
   background-color: rgb(59,97,151);
   color: white;
 }
-
 .pagination span:hover:not(.active) {background-color: #ddd;}
 .delete-button hover:not(.active) {background-color: #ddd;}
