--- a/sandbox.client/front/ts/app/main_form/main_form.component.css
+++ b/sandbox.client/front/ts/app/main_form/main_form.component.css
@@ -1,29 +1,12 @@
 body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box}
 
-/* Add a black background color to the top navigation bar */
-.topnav {
+.top-nav {
   overflow: hidden;
   background-color: #e9e9e9;
 }
 
-.sort_tr {
-  font-size: 1.2em;
-  text-align: left;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  background-color: rgb(17, 64, 151);
-  color: white;
-  cursor: pointer;
-  text-transform: uppercase;
-}
-
-.sort_td {
-  color: black;
-}
-
-/* Style the links inside the navigation bar */
-.topnav button {
+.top-nav button {
   margin: 6px;
   outline: none;
   float: left;
@@ -39,22 +22,16 @@ body {font-family: Arial, Helvetica, sans-serif;}
   font-size: 1.2em;
   text-transform: uppercase;
 }
-
-/* Change the color of links on hover */
-.topnav button:hover {
+.top-nav button:hover {
   background-color: rgb(249,249,249);
   color: black;
 
 }
-
-/* Style the "active" element to highlight the current page */
-.topnav button.active {
+.top-nav button.active {
   background-color: rgb(59,97,151);
   color: white;
 }
-
-/* Style the search box inside the navigation bar */
-.topnav input[type=text] {
+.top-nav input[type=text] {
   float: right;
   padding: 6px;
   border: none;
@@ -62,10 +39,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
   margin-right: 16px;
   font-size: 17px;
 }
-
-/* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
 @media screen and (max-width: 600px) {
-  .topnav a, .topnav input[type=text] {
+  .top-nav a, .top-nav input[type=text] {
     float: none;
     display: block;
     text-align: left;
@@ -73,7 +48,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
     margin: 0;
     padding: 14px;
   }
-  .topnav input[type=text] {
+  .top-nav input[type=text] {
     border: 1px solid #ccc;
   }
 }
@@ -85,15 +60,15 @@ body {font-family: Arial, Helvetica, sans-serif;}
   empty-cells: show;
   border-collapse: separate;
 }
-
 .customers td, .customers th {
   padding: 8px;
 }
-
-.customers tbody tr:nth-child(even){background-color: rgb(249,249,249);}
-
-.customers tbody tr:hover {background-color: rgb(230,230,230);}
-
+.customers tbody tr:nth-child(even){
+  background-color: rgb(249,249,249);
+}
+.customers tbody tr:hover {
+  background-color: rgb(230,230,230);
+}
 .not_sort_th {
   font-size: 1.2em;
   text-align: left;
@@ -108,43 +83,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 .customers td {
   font-size: 1em;
 }
-
 .customers tfoot td {
   vertical-align:center !important;
   align-items: center;
 }
-
-.delete-button {
-  outline: none;
-  border: none;
-  font-size: 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  color: rgb(59,97,151);
-  background-color: rgba(255,255,255,0);
-}
-
-.delete-button {
-  transition-duration: 0.4s;
-}
-
-.delete-button:hover {
-  color: red;
-}
-
-
-.pagination span {
-  color: black;
-  padding: 8px 16px;
-  text-decoration: none;
-  transition: background-color .3s;
-}
-
-.pagination span.active {
-  background-color: rgb(59,97,151);
-  color: white;
-}
-
-.pagination span:hover:not(.active) {background-color: #ddd;}
-.delete-button hover:not(.active) {background-color: #ddd;}
